--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "http-proxy-middleware": "^3.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-scripts": "^4.0.3"
   },
   "browserslist": {
