--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "chart.js": "^4.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^5.3.0",
